# sway_diamonds

./: Cargo.toml  Forc.toml  README.md  fuel-toolchain.toml
implementation/: Forc.toml
implementation/src/: main.sw
proxy/: Forc.toml
proxy/src/: proxy.sw
src/: main.sw
tests/: harness.rs
