[package]
name = "bridge-fungible-token-contract"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies"]
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-bridge"
version = "0.3.0"
rust-version = "1.72.0"
publish = false

[dependencies]
fuel-abi-types = "0.3.0"
fuel-asm = "0.43.1"
fuel-tx = "0.43.1"
fuel-core-types = { version = "0.22.0", default-features = false }
fuels = { version = "0.55.1", features = ["fuel-core-lib"] }

primitive-types = "0.12.1"
sha3 = "0.10.1"
serde = { version = "1.0.193", default-features = false }
serde_json = "1.0.108"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
hex = "0.4.3"

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
